--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "gatsby": "^3.4.1",
+    "gatsby-cli": "^3.4.1",
+    "gatsby-plugin-styled-components": "^4.4.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
